adding a exercises JS

--- a/Exercicíos JS com HTML/NodeList Browser/index.html
+++ b/Exercicíos JS com HTML/NodeList Browser/index.html
@@ -10,6 +10,13 @@
   <body>
     <section class="container">
       <h1>Titulo AQUI</h1>
+      <div class="paragrafos">
+       <p> Lorem ipsum dolor sit, </p>
+        <p> amet consectetur adipisicing elit. </p>
+         <p> Temporibus rem molestias quisquam quos animi voluptatem accusantium? </p>
+          <p> Quos voluptas quisquam doloremque deserunt pariatur rem, </p>
+           <p> quasi esse cupiditate consectetur, id molestiae autem? </section>
+          </div>
     <script src="./assets/js/main.js"></script>
     </section>
   </body>
