--- a/Async&Await/xmlHttpRequest/index3.html
+++ b/Async&Await/xmlHttpRequest/index3.html
@@ -9,12 +9,7 @@
   </head>
   <body>
     <section class="container">
-      <h1>Olá Mundo</h1>
-      <a href="index2.html">Página 2</a>
-      <a href="index3.html">Página 3</a>
-      <a href="index4.html">Página 4</a>
-
-      <div class="resultado"></div>
+      <h1>Página 3 do XML Http Request</h1>
     </section>
     <footer>
       <script src="./xmlHttpRequest.js"></script>
